kubernetes/mediaplayback/themarr/themarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: themarr
  namespace: mediaplayback
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 24h"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: themarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: themarr
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsUser: 999
      containers:
      - name: themarr
        image: ghcr.io/timoverbrugghe/themarr:latest
        imagePullPolicy: Always
        stdin: false
        tty: false
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 999
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "96Mi"
            cpu: "50m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        startupProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 30
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        volumeMounts:
        - name: movies
          mountPath: /movies
        - name: tmp
          mountPath: /tmp
        - name: tvshows
          mountPath: /tv
      volumes:
      - name: movies
        persistentVolumeClaim:
          claimName: movies-pvc
      - name: tmp
        emptyDir:
          medium: Memory
          sizeLimit: 128Mi
      - name: tvshows
        persistentVolumeClaim:
          claimName: tvshows-pvc
